# orca_v2

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  debug_binary.py  example.py  orca_pure_python.py  pyproject.toml  setup.py
.github/workflows/: build-and-publish.yml
orca/: __init__.py  _dummy.c  cli.py  lib.py  orca.py
src/: orca.cpp
tests/: __init__.py  test_outputs_match.py
tests/test_data/: actual_edge5.out  actual_node5.out  edge4.out  edge5.out  graph.in  node4.out  node5.out
