[build-system]
requires = ["setuptools>=61.0", "wheel", "cmake>=3.10"]
build-backend = "setuptools.build_meta"

[project]
name = "orca-graphlets"
version = "0.1.3"
description = "ORCA: Python wrapper for efficient graphlet counting"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Ole Petersen", email = "peteole2707@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["graph", "graphlets", "network", "analysis", "orca"]
dependencies = [
    "numpy>=1.24.4",
]

[project.urls]
Homepage = "https://github.com/yourusername/orca_v2"
Repository = "https://github.com/yourusername/orca_v2"
Issues = "https://github.com/yourusername/orca_v2/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["orca"]
include-package-data = true


[tool.bdist_wheel]
# Force platform-specific wheels
universal = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "-s",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
